examples/test/testpolicy12345.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12345
  namespace: namespace270
spec:
  podSelector:
    matchLabels:
      key41: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value35
          key39: value43
      podSelector:
        matchLabels:
          key35: value3
          key16: value23
          key5: value31
